openmediavault (0.2.5.4) stable; urgency=low

  * Add ability to enable/disable Cron/RSync jobs.
  * Disable purging man pages in Dpkg Post-Invoke by default. This can be
    enabled via environment variable OMV_DPKG_POSTINVOKE_PURGE_MAN.
  * Mantis 0000263: Configuration backup file naming scheme

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 13 Nov 2011 03:05:47 +0100

openmediavault (0.2.5.3) stable; urgency=low

  * Add ability to add hot spares to a RAID device via WebGUI.
  * Modify regular expression to validate usernames.
  * Change Avahi (Zeroconf) listening port for SMB service from 139 to 445.
  * Improve implementation of log file handling. Output the last 100000 lines.
    Limitation can be modified via OMV_MAX_LOGFILE_LINES environment variable.
  * Mantis 0000005: PHP crashes when sorting bigger syslog files
  * Mantis 0000084: Unable to replace faulted drive in RAID5 array via GUI
  * Mantis 0000249: FTP MasqueradeAddress does not accept FQDN
  * Mantis 0000260: Using simple quote on comment give error
  * Mantis 0000261: Display physical memory usage based on unbuffered/uncached
    used/free values.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 10 Nov 2011 19:36:05 +0100

openmediavault (0.2.5.2) stable; urgency=low

  * Display use of shared folder
  * Mantis 0000105: Add ability to set additional network interface settings
  * Mantis 0000240: Allow empty primary/secondary DNS server

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 Nov 2011 20:59:35 +0100

openmediavault (0.2.5.1) stable; urgency=low

  * Mantis 0000236: Allow more characters in share name

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 07 Nov 2011 21:01:12 +0100

openmediavault (0.2.5) stable; urgency=low

  * Show the device where the operation system is installed on in
    'Storage | Physical Disks' and 'Storage | S.M.A.R.T.'
  * Set 'valid users = %S' for SMB/CIFS home directories