@@ -40,7 +40,8 @@ class UserMgmtModule extends OMVModuleAbstract implements OMVINotifyListener {
 		// Prepare command arguments
 		$cmdparam = sprintf("--no-user-group --gid %s --password %s ".
 		  "--shell %s", $GLOBALS['OMV_USERMGMT_DEFAULT_GROUP'],
-		  crypt($object['password']), $object['shell']);
+		  escapeshellarg(crypt($object['password'])),
+		  escapeshellarg($object['shell']));
 		if (!empty($object['comment'])) {
 			$cmdparam .= sprintf(" --comment %s", escapeshellarg(
 			  $object['comment']));
@@ -78,7 +79,8 @@ class UserMgmtModule extends OMVModuleAbstract implements OMVINotifyListener {
 		} else {
 			$cmdparam .= " --create-home";
 		}
-		$cmd = sprintf("sudo useradd %s %s 2>&1", $cmdparam, $object['name']);
+		$cmd = sprintf("sudo useradd %s %s 2>&1", $cmdparam, escapeshellarg(
+		  $object['name']));
 		OMVUtil::exec($cmd, $output, $result);
 		if ($result !== 0) {
 			throw new OMVException(OMVErrorMsg::E_EXEC_FAILED,
@@ -92,8 +94,8 @@ class UserMgmtModule extends OMVModuleAbstract implements OMVINotifyListener {
 	public function modifyUser($object) {
 		global $xmlConfig;
 		// Prepare command arguments
-		$cmdparam = sprintf("--password %s --shell %s", crypt(
-		  $object['password']), $object['shell']);
+		$cmdparam = sprintf("--password %s --shell %s", escapeshellarg(crypt(
+		  $object['password'])), escapeshellarg($object['shell']));
 		if (!empty($object['groups'])) {
 			$cmdparam .= sprintf(" --groups %s", $object['groups']);
 		}
@@ -125,10 +127,12 @@ class UserMgmtModule extends OMVModuleAbstract implements OMVINotifyListener {
 		} else {
 			// Set home directory to default value /home/<name>, the
 			// directory must not exist in this case (see 'useradd' man page).
-			$cmdparam .= sprintf(" --home /home/%s", $object['name']);
+			$cmdparam .= sprintf(" --home %s", escapeshellarg(sprintf(
+			  "/home/%s", $object['name'])));
 		}
 		// Modify user
-		$cmd = sprintf("sudo usermod %s %s 2>&1", $cmdparam, $object['name']);
+		$cmd = sprintf("sudo usermod %s %s 2>&1", $cmdparam,
+		  escapeshellarg($object['name']));
 		OMVUtil::exec($cmd, $output, $result);
 		if ($result !== 0) {
 			throw new OMVException(OMVErrorMsg::E_EXEC_FAILED,
@@ -140,7 +144,8 @@ class UserMgmtModule extends OMVModuleAbstract implements OMVINotifyListener {
 	 * Delete an user.
 	 */
 	public function deleteUser($object) {
-		$cmd = sprintf("sudo userdel --force %s 2>&1", $object['name']);
+		$cmd = sprintf("sudo userdel --force %s 2>&1", escapeshellarg(
+		  $object['name']));
 		OMVUtil::exec($cmd, $output, $result);
 		if ($result !== 0) {
 			throw new OMVException(OMVErrorMsg::E_EXEC_FAILED,
@@ -157,7 +162,7 @@ class UserMgmtModule extends OMVModuleAbstract implements OMVINotifyListener {
 			$cmdparam .= sprintf(" -g %d", intval($object['gid']));
 		}
 		$cmd = sprintf("sudo groupadd %s %s 2>&1", $cmdparam,
-			$object['name']);
+		  escapeshellarg($object['name']));
 		OMVUtil::exec($cmd, $output, $result);
 		if ($result !== 0) {
 			throw new OMVException(OMVErrorMsg::E_EXEC_FAILED,
@@ -170,7 +175,7 @@ class UserMgmtModule extends OMVModuleAbstract implements OMVINotifyListener {
 	 */
 	public function deleteGroup($object) {
 		$cmd = sprintf("sudo delgroup --only-if-empty %s 2>&1",
-		  $object['name']);
+		  escapeshellarg($object['name']));
 		OMVUtil::exec($cmd, $output, $result);
 		if ($result !== 0) {
 			throw new OMVException(OMVErrorMsg::E_EXEC_FAILED,
